# maintenance-assistant

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  assistant.legacy.sh  assistant.py  config.sample.yml  main.py  main.sh  oldmain.py  oldmain.sh  prep.sh  pyproject.toml  queue_worker.py  requirements-dev.txt  requirements.txt  task1.sh  upgrade.legacy.sh  upgrade.py
.devcontainer/: devcontainer.json  post_create.sh
app/bootstrap/: bootstrap.py  setup_check.py
app/configs/: config_file.py  constants.py
app/controllers/: ArgumentsManager.py  arguments_manager_controller.py
app/utils/: argument_parser.py  command_runner.py  forms.py  lock_manager.py
configs/: config_file.py  settings.py
forms/: collect_server_info.py
helpers/: cli.py  cli_params.py  helpers.sh  lock_manager.py  server-init.sh  setup_check.py  task1.sh  task1.yml  task4.sh
scripts/: dev_prep.sh
scripts/configs/: settings.sh
scripts/helpers/: bundle.sh  change_password.sh  check_sshd_config.sh  dep_check.sh  env_check.sh  unattended_upgrades.sh  updates.sh
scripts/utils/: bundle.sh  cli.sh  utils.sh
src/: main.py  upgrade.py
src/configs/: settings.py
src/forms/: main_menu.py
src/helpers/: cli_params.py
src/utils/: forms.py  text.py
style/: console.tcss
tasks/: server-init.sh  task1.sh  task1.yml  task2.sh  task3.sh  task4.sh  task5.sh
tasks/modules/: antivirus.sh  apt.sh  backup.sh  btop.sh  hostname.sh  locale.sh  maintenance_log.sh  plesk.sh  (+8 more)
utils/: cli.py  forms.py  text.py  utils.sh
v1.0.4/: LICENSE  main.sh
vendors/: plesk-installer.sh
(+7 files in other folders)
