[project]
name = "gws-maintenance"
version = "0.1.0"
description = "GWS Maintenance"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["python-decouple>=3.8", "python-dotenv>=1.2.1"]

[project.scripts]
git-sentinel = "__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
  "black>=26.3.0",
  "commitizen>=4.16.3",
  "mypy>=2.1.0",
  "pytest-cov",
  "pre-commit>=4.5.1",
  "pyinstaller>=6.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_scheme = "semver2"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
changelog_merge_prerelease = true
version_files = ["pyproject.toml:^version", "src/__init__.py:^APP_VERSION"]

[tool.commitizen.change_type_map]
feat = "Features"
fix = "Bug Fixes"
perf = "Performance Improvements"
refactor = "Refactoring"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true

[tool.black]
line-length = 80
exclude = '''
/(
    migrations
  | venv
  | .git
)/
'''
